# flir_lepton

./: .gitignore  CHANGELOG.rst  LICENSE  README.md
flir_lepton/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_lepton/config/: params.yaml
flir_lepton/include/flir_lepton/: flir_lepton.h  utils.h
flir_lepton/launch/: bring_up_configs.sh  configs.launch  flir_lepton.launch
flir_lepton/src/: flir_lepton.cpp  flir_lepton_node.cpp  utils.cpp
flir_lepton_auxiliary/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_lepton_auxiliary/datasets/: dataset05  dataset_spline
flir_lepton_auxiliary/scripts/: produce_dataset.py  thermal_interp.py
flir_lepton_image_processing/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
flir_lepton_image_processing/cfg/: processing_node_topics.yaml  thermal_cfg.cfg
flir_lepton_image_processing/include/flir_lepton_image_processing/processing_node/: process.h  thermal_roi_detector.h
flir_lepton_image_processing/include/flir_lepton_image_processing/utils/: blob_detection.h  bounding_box_detection.h  defines.h  edge_detection.h  message_conversions.h  morphological_operators.h  outline_discovery.h  parameters.h  roi_filters.h  thermal_rois_conveyor.h  timer.h  visualization.h
flir_lepton_image_processing/launch/: flir_lepton_image_processing.launch
flir_lepton_image_processing/msg/: CandidateRoisVectorMsg.msg  GeneralAlertInfo.msg  ThermalAlert.msg  ThermalAlertVector.msg
flir_lepton_image_processing/src/processing_node/: CMakeLists.txt  process.cpp  process_node.cpp  thermal_roi_detector.cpp
flir_lepton_image_processing/src/utils/: blob_detection.cpp  bounding_box_detection.cpp  edge_detection.cpp  message_conversions.cpp  morphological_operators.cpp  outline_discovery.cpp  parameters.cpp  roi_filters.cpp  thermal_rois_conveyor.cpp  timer.cpp  visualization.cpp
flir_lepton_launchers/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_lepton_launchers/launch/: all_nodes.launch  flir_lepton.launch
flir_lepton_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_lepton_msgs/msg/flir_lepton_image_processing/: ThermalAlert.msg  ThermalAlertVector.msg
flir_lepton_msgs/msg/flir_lepton_sensor/: FlirLeptonBatchMsg.msg  FlirLeptonRawMsg.msg  TemperaturesMsg.msg
flir_lepton_ros_comm/: CHANGELOG.rst  CMakeLists.txt  package.xml
flir_lepton_ros_comm/msg/: CandidateRoiMsg.msg  FlirLeptonMsg.msg  ThermalAlert.msg  ThermalAlertVector.msg
flir_lepton_rpi2/: CMakeLists.txt  package.xml
flir_lepton_sensor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
flir_lepton_sensor/config/: params.yaml
flir_lepton_sensor/include/: colormaps.h  flir_lepton_hw_iface.h  flir_lepton_utils.h
flir_lepton_sensor/include/utils/: utils.h
flir_lepton_sensor/launch/: flir_lepton_sensor.launch
flir_lepton_sensor/src/: flir_lepton_hw_iface.cpp  flir_lepton_sensor.cpp  flir_lepton_utils.cpp  utils.cpp
