<?xml version="1.0"?>
<package format="2">
  <name>flir_lepton_ros_comm</name>
  <version>0.0.1</version>
  <description>Flir Lepton ros communications</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>
  <maintainer email="aggelostriadafillidis@gmail.com">Angelos Triantafyllidis</maintainer>

  <author>Konstantinos Panayiotou</author>
  <author>Angelos Triantafyllidis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
