<?xml version="1.0"?>
<package format="2">
  <name>flir_lepton_ros_comm</name>
  <version>0.0.1</version>
  <description>Flir Lepton ros communications</description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>

  <author email="klpanagi@gmail.com">Konstantinos Panayiotou</author>
  <author email="aggelostriadafillidis@gmail.com">Angelos Triantafyllidis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--message generation and execution dependencies-->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
