<?xml version="1.0"?>
<package format="2">
  <name>flir_lepton_rpi2</name>
  <version>0.0.1</version>
  <description>
    Contains sources to interfere with Flir-Lepton LWIR camera under ROS-indigo
  </description>

  <maintainer email="klpanagi@gmail.com">Konstantinos Panayiotou</maintainer>
  <maintainer email="aggelostriadafillidis@gmail.com">Angelos Triantafyllidis</maintainer>

  <author>Konstantinos Panayiotou</author>
  <author>Angelos Triantafyllidis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flir_lepton</exec_depend>
  <exec_depend>flir_lepton_image_processing</exec_depend>
  <exec_depend>flir_lepton_ros_comm</exec_depend>
  <exec_depend>flir_lepton_launchers</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
